# ddd-policy-tracer

./: .gitignore  AGENTS.md  DOMAIN_STRUCTURE.md  PRD_DOCUMENT_ACQUISITION_V1.md  README.md  TODO.md  UBIQUITOUS_LANGUAGE.md  main.py  pyproject.toml
ddd_policy_tracer/: __init__.py  adapters.py  cli.py  domain.py  service_layer.py  source_strategies.py
ddd_policy_tracer/analysis/: PIPELINE.md  PIPELINE_CLAIMS.md  README.md  ROADMAP.md  __init__.py  cli.py  service_layer.py  silver_dataset.py  silver_dataset_qa.py
ddd_policy_tracer/analysis/canonicalization/: README.md  __init__.py  adapters.py  domain.py  models.py  run.py  service_layer.py
ddd_policy_tracer/analysis/chunks/: adapters.py  chunking.py  chunking_models.py  service_layer.py
ddd_policy_tracer/analysis/claims/: __init__.py  adapters.py  extractors.py  models.py  ports.py  run.py  service_layer.py
ddd_policy_tracer/analysis/embedding/: README.md
ddd_policy_tracer/analysis/entities/: __init__.py  adapters.py  catalog.py  extractors.py  models.py  ports.py  resolution.py  retrieval.py  review_queue.py  run.py  service_layer.py
ddd_policy_tracer/analysis/graph/: __init__.py  contracts.py  filtering.py  materializer.py  repositories.py  run.py  service_layer.py  sinks.py  validation.py  viewer.py
ddd_policy_tracer/discovery/: __init__.py  adapters.py  cli.py  service_layer.py  source_strategies.py
ddd_policy_tracer/utils/: __init__.py  logger.py  time_helpers.py
ddd_policy_tracer/utils/events/: base.py  local.py
docs/: scratchpad.md  sources.md
scripts/: aggregate_claim_rows.py  visualise_chunks.py  visualise_claims_dataset.py
src/: __init__.py
tests/: conftest.py
tests/integration/: test_acquisition_core.py  test_entities_pipeline_end_to_end.py  test_entities_pipeline_performance.py  test_graph_contract_hardening.py  test_graph_scaffold_cli.py  test_operator_cli.py  test_service_layer_extraction.py
tests/unit/: test_adapters_pdf.py  test_adapters_sitemap.py  test_aggregate_claim_rows.py  test_australia_institute_discover_documents.py  test_australia_institute_extract_document.py  test_lowy_institute_discover_documents.py  test_lowy_institute_extract_document.py
tests/unit/analysis/: test_analysis_cli.py  test_canonicalization_cli.py  test_canonicalization_run.py  test_chunk_persistence.py  test_chunking.py  test_claims_chunk_repository.py  test_claims_evaluation.py  (+31 more)
(+15 files in other folders)
