[project]
name = "ddd-policy-tracer"
version = "0.1.0"
description = "DDD-first policy document acquisition prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=6.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
